# ai-coding-agents

./: .env.example  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
examples/: demo_usage.md  sample_config.yaml
scripts/: setup_dev.sh
src/ai_coding_agent/: __init__.py  cli.py
src/ai_coding_agent/core/: __init__.py  agent.py
src/ai_coding_agent/interface/: __init__.py  approval.py  display.py  terminal.py
src/ai_coding_agent/llm/: __init__.py  base.py  manager.py  providers.py
src/ai_coding_agent/memory/: __init__.py  base.py  manager.py  persistent.py  session.py
src/ai_coding_agent/tools/: __init__.py  base.py  code.py  execution.py  filesystem.py  git.py
src/ai_coding_agent/utils/: config.py
tests/: conftest.py  test_agent.py
